# jxl-oxide-py

./: Cargo.toml  LICENSE  README.md  pyproject.toml
.github/workflows/: CI.yml
examples/: load_save.py
jxl_oxide/: JxlImagePlugin.py  __init__.py  decoder.py
jxl_oxide_py/: __init__.py
jxl_oxide_py/jxl_oxide_py/: ffi.py
pil_jxl_oxide_py/: JXLImagePlugin.py  __init__.py
src/: errors.rs  lib.rs
