[package]
name = "jxl-oxide-python"
version = "0.2.5"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "jxl_oxide_python"
crate-type = ["cdylib"]

[dependencies]
jxl-oxide = "0.6.0"

[profile.release]
opt-level = 3
strip = true
lto = true
